[gd_scene load_steps=2 format=3 uid="uid://o47w54q6jnqp"]

[ext_resource type="Script" path="res://Scripts/Editor/EditorToolbar.gd" id="1_wqbfs"]

[node name="EditorToolbar" type="VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
offset_right = 120.0
offset_bottom = 300.0
script = ExtResource("1_wqbfs")

[node name="ToolsLabel" type="Label" parent="."]
layout_mode = 2
text = "Tools"
horizontal_alignment = 1

[node name="ToolButtonGroup" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NoteButton" type="Button" parent="ToolButtonGroup"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Note (N)"
tooltip_text = "Place normal notes (Keyboard: 1-5)"

[node name="HOPOButton" type="Button" parent="ToolButtonGroup"]
layout_mode = 2
toggle_mode = true
text = "HOPO (H)"
tooltip_text = "Place Hammer-On/Pull-Off notes"

[node name="TapButton" type="Button" parent="ToolButtonGroup"]
layout_mode = 2
toggle_mode = true
text = "Tap (T)"
tooltip_text = "Place tap notes"

[node name="SelectButton" type="Button" parent="ToolButtonGroup"]
layout_mode = 2
toggle_mode = true
text = "Select (S)"
tooltip_text = "Select and move notes"

[node name="BPMButton" type="Button" parent="ToolButtonGroup"]
layout_mode = 2
toggle_mode = true
text = "BPM (B)"
tooltip_text = "Add BPM change markers"

[node name="EventButton" type="Button" parent="ToolButtonGroup"]
layout_mode = 2
toggle_mode = true
text = "Event (E)"
tooltip_text = "Add event markers"

[node name="HSeparator1" type="HSeparator" parent="."]
layout_mode = 2

[node name="SnapGroup" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SnapLabel" type="Label" parent="SnapGroup"]
layout_mode = 2
text = "Snap"
horizontal_alignment = 1

[node name="SnapSelector" type="OptionButton" parent="SnapGroup"]
layout_mode = 2
tooltip_text = "Note snap division
[/] to adjust"

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="ViewGroup" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ViewLabel" type="Label" parent="ViewGroup"]
layout_mode = 2
text = "View Mode"
horizontal_alignment = 1

[node name="View2DButton" type="Button" parent="ViewGroup"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "2D Canvas"
tooltip_text = "Show 2D note highway (V)"

[node name="View3DButton" type="Button" parent="ViewGroup"]
layout_mode = 2
toggle_mode = true
text = "3D Runway"
tooltip_text = "Show 3D preview runway"

[node name="ViewSplitButton" type="Button" parent="ViewGroup"]
layout_mode = 2
toggle_mode = true
text = "Split View"
tooltip_text = "Show both 2D and 3D"

[node name="HSeparator3" type="HSeparator" parent="."]
layout_mode = 2

[node name="GridToggle" type="CheckButton" parent="."]
layout_mode = 2
button_pressed = true
text = "Show Grid"
